# gpx-link

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md  pyproject.toml
.cursor/rules/: project.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: android-play.yml  ci.yml  release.yml
.run/: Python tests in _.run.xml  gpx-link-gui.run.xml
android/: .gitignore  Gemfile  gradle.properties  keystore.properties.example  settings.gradle.kts
android/app/: build.gradle  build.gradle.kts  proguard-rules.pro
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/github/gpxlink/: GpxFileAdapter.kt  MainActivity.kt
android/app/src/main/java/org/cismypa/gpxlink/: AdMobTestDevices.kt  AdsConsent.kt  GpxFileAdapter.kt  MainActivity.kt  ProjectDownloadsExporter.kt  RemoveAdsBilling.kt
android/app/src/main/python/: bridge.py
android/app/src/main/res/drawable/: ic_gpx_list_24.xml  ic_launcher.xml  ic_map_24.xml  ic_menu_hamburger_24.xml  ic_my_location_24.xml
android/app/src/main/res/layout/: activity_main.xml  item_gpx_file.xml
android/app/src/main/res/layout-land/: activity_main.xml
android/app/src/main/res/menu/: main.xml  menu_gpx_row.xml  menu_project.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/fastlane/: Appfile  Fastfile
android/fastlane/metadata/android/en-US/: full_description.txt  play_store_notes.txt  promotional_text.txt  short_description.txt  title.txt
android/fastlane/metadata/android/en-US/changelogs/: 1003000.txt
scripts/: build-apk.sh  crop-jpeg-top.swift  generate_brand_assets.py  generate_play_assets.py
src/gpx_link/: __init__.py  __main__.py  bounds.py  cli.py  desktop_ads.py  html_map.py  maps_urls.py  models.py  parser.py  simplify.py
src/gpx_link/gui/: __init__.py  app.py
src/py_app_template/: __init__.py  calculator.py
tests/: __init__.py  conftest.py  test_bounds.py  test_calculator.py  test_cli.py  test_desktop_ads.py  test_html_map.py  test_maps_urls.py  test_parser.py  test_simplify.py
