[project]
name = "py-app-template"
version = "1.0.0"
description = "A general-purpose Python project template"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your@email.com" },
]
dependencies = []

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "python-semantic-release>=10.5.0,<11",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=py_app_template",
    "--cov-report=term-missing",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["py_app_template"]

[tool.coverage.report]
show_missing = true

[tool.codespell]
skip = ".venv,uv.lock"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "uv build"
