[project]
name = "gpx-link"
version = "1.20.0"
description = "View GPX waypoints on OpenStreetMap and open locations in Google Maps"
requires-python = ">=3.10"
authors = [
    { name = "Markus Borris", email = "devmborrs@gmail.com" },
]
dependencies = [
    "gpxpy>=1.6.2",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.6.0",
]

[project.scripts]
gpx-link = "gpx_link.cli:main"
gpx-link-gui = "gpx_link.gui.app:main"

[build-system]
requires = ["uv_build>=0.11.11,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "python-semantic-release>=10.5.0,<11",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=gpx_link",
    "--cov-report=term-missing",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["gpx_link"]

[tool.coverage.report]
show_missing = true

[tool.codespell]
skip = ".venv,uv.lock,android/Gemfile.lock"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "uv lock --upgrade-package gpx-link && uv build"
